ASOC-47751 : Text wrapping and visual issues fixed in list filter component (#2197)
* Text wrapping and visual issues fixed in list filter component

* Last scan time and Agent not seen sice options corrected

* git conflict resolved

--- a/investigate-hosts/app/styles/investigate-hosts/components/host-list/content-filter/_list-filter.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-list/content-filter/_list-filter.scss
@@ -14,8 +14,21 @@
       }
     }
   }
+  .filter-trigger-button {
+    text-align: right;
+    padding-left: 1rem!important;
+  }
+  .filter-trigger-button span{
+    float: left;
+    text-align: left;
+    margin-left: -7px;
+  }
 }
 
+.footer {
+  padding-bottom: 0 !important;
+  padding-right: 0.5rem !important;
+}
 .filter-file-size {
   @include rsa-layer(above)
 }
