--- a/investigate-hosts/app/styles/investigate-hosts/components/host-list/content-filter/_manifest.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-list/content-filter/_manifest.scss
@@ -26,8 +26,8 @@ $filterPanelMinWidth: 200px;
 }
 
 .content-filter {
-  color: text-color(primary, lightest);
-  width: calc(90vw - 200px);
+  color: text-color(neutral);
+  width: calc(112vw - 200px);
   div {
     float: left;
   }
